# TEL102

./: CMakeLists.txt  clases.cpp  clases.h  dia.cpp  main.cpp  metrounit.cpp  metrounit.h  passenger.cpp  passenger.h  pelao.cpp  schedule.cpp  station.cpp  station.h  timecontroller.cpp  timecontroller.h
ProgramaPorConsola/: dia.cpp  dia.h  main.cpp  metrounit.cpp  metrounit.h  schedule.h  station.cpp  timecontroller.cpp
ProgramaPorInterfaz/: Proyecto_Seminario_TEL102.pro  Proyecto_Seminario_TEL102.pro.user.27c253f  Proyecto_Seminario_TEL102.pro.user.a7af3bf  Proyecto_Seminario_TEL102.pro.user.f0f47b8  dia.h  main.cpp  metrounit.cpp  metrounit.h  passenger.cpp  passenger.h  schedule.cpp  simulador_metro.cpp  simulador_metro.h  simulador_metro.ui  station.cpp  station.h  timecontroller.cpp  timecontroller.h
ProyectoTEL102/: CMakeLists.txt  classes.h  dia.cpp  metrounit.cpp  metrounit.h  passenger.cpp  passenger.h  timecontroller.h
